syntax = "proto3";
package pb.mpsim;

import "mpsim/read_acc.proto";
import "mpsim/read_gyro.proto";
import "mpsim/read_state.proto";
import "mpsim/write_motor.proto";

message Request {
    reserved 1, 2, 3, 4; // in case extra data is needed in the future to match requests to responses
    
    oneof request_type {
        RequestReadState read_state     = 5;
        RequestReadAcc read_acc         = 6;
        RequestReadGyro read_gyro       = 7;
        RequestWriteMotor write_motor   = 8;
    }
}

message Response {
    bool success = 1;
    reserved 2, 3, 4;
    
    oneof response_type {
        ResponseReadState read_state    = 5;
        ResponseReadAcc read_acc        = 6;
        ResponseReadGyro read_gyro      = 7;
        ResponseWriteMotor write_motor  = 8;
    }
}